--- a/marin.html
+++ b/marin.html
@@ -71,15 +71,16 @@
 		</script>
 		<style>
 			body {
-				background: black;
+				background: #748990;
 				overflow: hidden;
 			}
 			.rpog {
-				top: -72px;
+				top: -80px;
 				background: url('icon-nobg.png');
 				position: absolute;
 				width: 96px;
-				height: 72px;
+				height: 80px;
+				background-size: 92px;
 			}
 			@media (max-width: 600px) {
 				.rpog { transform: scale(0.5); }
